--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.35",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
